fix button contrast

--- a/src/components/Scene/Scene.module.scss
+++ b/src/components/Scene/Scene.module.scss
@@ -98,9 +98,9 @@
 
   & > button {
     border-radius: 3px;
-    background-color: var(--color-brand);
+    background-color: white;
     border: none;
-    color: white;
+    color: #000000b8;
     height: 32px;
     cursor: pointer;
     font-weight: bold;
@@ -117,8 +117,8 @@
     }
 
     &:hover{
-      background-color: white;
-      color: var(--color-brand);
+      background-color: var(--color-brand);
+      color: white;
     }
   }
 }
